--- a/src/index.css
+++ b/src/index.css
@@ -1,79 +1,34 @@
 @font-face {
-  font-family: "MacPaw Fixel Display";
-  src: url(../fonts/._MacPawFixelDisplay-Regular.otf) format("opentype");
+  font-family: "HelveticaNeueCyr-Bold";
+  src: url(assets/fonts/HelveticaNeueCyr-Bold.ttf) format("truetype");
 }
 @font-face {
-  font-family: "SF-Pro-Display-Regular";
-  src: url(../fonts/._SF-Pro-Display-Regular.otf) format("opentype");
+  font-family: "HelveticaNeueCyr-Medium";
+  src: url(assets/fonts/HelveticaNeueCyr-Medium.ttf) format("truetype");
+}
+@font-face {
+  font-family: "HelveticaNeueCyr-Regular";
+  src: url(assets/fonts/HelveticaNeueCyr-Roman.ttf) format("truetype");
 }
 
-:root {
-  /* font-family: MacPaw Fixel Display, sans-serif;
-  font-family: SF-Pro-Display-Regular, sans-serif; */
-  /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --font-family-400: HelveticaNeueCyr-Regular, sans-serif;
+  --font-family-500: HelveticaNeueCyr-Medium, sans-serif;
+  --font-family-700: HelveticaNeueCyr-Bold, sans-serif;
+  --main-color: #0957C3;
+  --text-white: #FBFBFB;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
+  font-family: var(--font-family-500);
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+ul{
+  list-style: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+a{
+  text-decoration: none;
 }
