--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,14 @@
   --font-family-700: HelveticaNeueCyr-Bold, sans-serif;
   --main-color: #0957C3;
   --text-white: #FBFBFB;
+  --text-black: #11101c;
 }
 
 *{
   box-sizing: border-box;
   font-family: var(--font-family-500);
   font-weight: 500;
+  font-size: 16px;
   margin: 0;
   padding: 0;
 }
