Added custom modal window

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   --font-family-500: HelveticaNeueCyr-Medium, sans-serif;
   --font-family-700: HelveticaNeueCyr-Bold, sans-serif;
   --main-color: #0957C3;
-  --text-white: #FBFBFB;
+  --main-white: #FBFBFB;
   --text-black: #11101c;
 }
 
