--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
   font-family: var(--font-family-500);
   font-weight: 500;
   font-size: 16px;
+  line-height: 150%;
   color: var(--text-black);
   margin: 0;
   padding: 0;
